--- a/CheckIn/Filter Students/FilterStudents.storyboard
+++ b/CheckIn/Filter Students/FilterStudents.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X8N-Kz-ZED">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X8N-Kz-ZED">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="JSr-9S-7Ju">
-                                <rect key="frame" x="0.0" y="10" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u3U-g1-LDd">
-                                <rect key="frame" x="37" y="76" width="301" height="535"/>
+                                <rect key="frame" x="37" y="66" width="301" height="535"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="l0p-0h-Hhd">
                                         <rect key="frame" x="14.5" y="26.5" width="272" height="482"/>
@@ -176,6 +174,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Yfx-CB-kcu"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="u3U-g1-LDd" firstAttribute="centerY" secondItem="Yfx-CB-kcu" secondAttribute="centerY" id="7LH-7I-s47"/>
@@ -187,7 +186,6 @@
                             <constraint firstItem="u3U-g1-LDd" firstAttribute="centerX" secondItem="Yfx-CB-kcu" secondAttribute="centerX" id="vPo-ea-xdf"/>
                             <constraint firstItem="u3U-g1-LDd" firstAttribute="width" secondItem="EA2-nO-2vC" secondAttribute="width" multiplier="0.8" constant="1" id="x2u-Gh-SKD"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Yfx-CB-kcu"/>
                     </view>
                     <connections>
                         <outlet property="cardView" destination="u3U-g1-LDd" id="gGw-j2-XhF"/>
