--- a/CheckIn/Launch Screen/Base.lproj/Main.storyboard
+++ b/CheckIn/Launch Screen/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="meN-F7-NTQ">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="meN-F7-NTQ">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +13,7 @@
             <objects>
                 <navigationController id="meN-F7-NTQ" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lal-de-iOg">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -35,27 +33,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hy7-DP-cGi">
-                                <rect key="frame" x="93.5" y="249.5" width="188.5" height="188.5"/>
+                                <rect key="frame" x="93.5" y="239.5" width="188.5" height="188.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Hy7-DP-cGi" secondAttribute="height" multiplier="1:1" id="Inn-FX-fhd"/>
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Hy7-DP-cGi" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" constant="1" id="Mbc-nA-NkY"/>
                             <constraint firstItem="Hy7-DP-cGi" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="d6M-v8-9qY"/>
                             <constraint firstItem="Hy7-DP-cGi" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="to5-hG-Tm1"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="6RM-T3-XO6"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="animatedView" destination="Hy7-DP-cGi" id="qsb-VU-A9b"/>
-                        <segue destination="ajg-hy-IRL" kind="show" identifier="CheckRegistration" animates="NO" id="eZW-8K-GdP"/>
-                        <segue destination="0Bg-6H-gAf" kind="showDetail" identifier="ShowList" animates="NO" id="Xn2-KK-68M"/>
+                        <segue destination="ajg-hy-IRL" kind="showDetail" identifier="CheckRegistration" animates="NO" id="eZW-8K-GdP"/>
+                        <segue destination="0Bg-6H-gAf" kind="show" identifier="ShowList" animates="NO" id="Xn2-KK-68M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -73,7 +71,9 @@
         <!--StudentList-->
         <scene sceneID="qlV-BX-woC">
             <objects>
-                <viewControllerPlaceholder storyboardName="StudentList" id="0Bg-6H-gAf" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="StudentList" id="0Bg-6H-gAf" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="imU-ek-Q5n"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6hP-cP-PxF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1392" y="234"/>
