--- a/CheckIn/Student List/StudentList.storyboard
+++ b/CheckIn/Student List/StudentList.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5hm-S8-v67">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5hm-S8-v67">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,48 +16,48 @@
         <!--Student List View Controller-->
         <scene sceneID="ImK-6I-bpc">
             <objects>
-                <viewController id="2mP-p9-kkM" customClass="StudentListViewController" customModule="CheckIn" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StudentList" id="2mP-p9-kkM" customClass="StudentListViewController" customModule="CheckIn" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oxw-L0-zFd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hX1-PY-291">
-                                <rect key="frame" x="0.0" y="32" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="22" width="414" height="736"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="studentListCell" rowHeight="60" id="VAn-61-JLH" customClass="StudentTableViewCell" customModule="CheckIn" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="60"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VAn-61-JLH" id="ucA-bB-nEv">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="59.666666666666664"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JfW-At-kF4">
-                                                    <rect key="frame" x="0.0" y="0.0" width="13.333333333333334" height="59.666666666666664"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="13.333333333333334" height="60"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="checkImage" translatesAutoresizingMaskIntoConstraints="NO" id="UDf-tQ-OeB">
-                                                    <rect key="frame" x="13.333333333333332" y="5.3333333333333321" width="48.666666666666671" height="49"/>
+                                                    <rect key="frame" x="13.333333333333336" y="5.6666666666666679" width="49" height="49"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="UDf-tQ-OeB" secondAttribute="height" multiplier="1:1" id="qUX-Xr-nGw"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ETg-7B-mjR">
-                                                    <rect key="frame" x="61.999999999999993" y="0.0" width="12.666666666666664" height="59.666666666666664"/>
+                                                    <rect key="frame" x="62.333333333333336" y="0.0" width="12.666666666666664" height="60"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="fname" text="FName" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tpx-uQ-Ksg">
-                                                    <rect key="frame" x="74.666666666666686" y="6" width="124" height="47.666666666666664"/>
+                                                    <rect key="frame" x="75" y="6" width="124" height="48"/>
                                                     <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ETP-rh-Bcf">
-                                                    <rect key="frame" x="198.66666666666666" y="0.0" width="16.666666666666657" height="59.666666666666664"/>
+                                                    <rect key="frame" x="199" y="0.0" width="16.666666666666657" height="60"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lname" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QDg-ch-LCB">
-                                                    <rect key="frame" x="215.33333333333331" y="6" width="186.33333333333331" height="47.666666666666664"/>
+                                                    <rect key="frame" x="215.66666666666663" y="6" width="186.33333333333337" height="48"/>
                                                     <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -103,7 +101,7 @@
                                 </prototypes>
                             </tableView>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ShareCheat" translatesAutoresizingMaskIntoConstraints="NO" id="f3f-Ub-FgF">
-                                <rect key="frame" x="20" y="63.999999999999993" width="146" height="109.33333333333331"/>
+                                <rect key="frame" x="20" y="43.999999999999993" width="146" height="109.33333333333331"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="f3f-Ub-FgF" secondAttribute="height" multiplier="4:3" id="ipk-ho-CYs"/>
                                 </constraints>
@@ -115,21 +113,22 @@
                                 </constraints>
                             </imageView>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scrollCheat" translatesAutoresizingMaskIntoConstraints="NO" id="SU5-BN-Yr5">
-                                <rect key="frame" x="184" y="63.999999999999993" width="146" height="109.33333333333331"/>
+                                <rect key="frame" x="184" y="43.999999999999993" width="146" height="109.33333333333331"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="SU5-BN-Yr5" secondAttribute="height" multiplier="4:3" id="kFn-ii-Yll"/>
                                 </constraints>
                             </imageView>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fnameCheat" translatesAutoresizingMaskIntoConstraints="NO" id="JB8-tT-9cv">
-                                <rect key="frame" x="61.666666666666664" y="430" width="125.33333333333334" height="94"/>
+                                <rect key="frame" x="61.666666666666664" y="420" width="125.33333333333334" height="94"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JB8-tT-9cv" secondAttribute="height" multiplier="4:3" id="OTn-dS-8RN"/>
                                 </constraints>
                             </imageView>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lnameCheat" translatesAutoresizingMaskIntoConstraints="NO" id="eRg-Kd-o1l">
-                                <rect key="frame" x="237.00000000000003" y="336" width="125.33333333333334" height="94"/>
+                                <rect key="frame" x="237.00000000000003" y="326" width="125.33333333333334" height="94"/>
                             </imageView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Tzd-A1-ima"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="eQJ-4u-pjT" firstAttribute="width" secondItem="oxw-L0-zFd" secondAttribute="width" multiplier="0.3" constant="1" id="4CU-GH-10I"/>
@@ -153,7 +152,6 @@
                             <constraint firstItem="hX1-PY-291" firstAttribute="width" secondItem="oxw-L0-zFd" secondAttribute="width" id="qiW-OV-rn1"/>
                             <constraint firstItem="hX1-PY-291" firstAttribute="centerX" secondItem="Tzd-A1-ima" secondAttribute="centerX" id="vji-E5-6pe"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Tzd-A1-ima"/>
                     </view>
                     <navigationItem key="navigationItem" id="it5-05-iGs">
                         <nil key="title"/>
@@ -244,7 +242,7 @@
             <objects>
                 <navigationController id="5hm-S8-v67" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i7O-De-4GT">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -256,6 +254,7 @@
             <point key="canvasLocation" x="-439" y="-83"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="QRCheat" width="363" height="207"/>
         <image name="ShareCheat" width="384" height="241"/>
@@ -263,5 +262,4 @@
         <image name="lnameCheat" width="330" height="144"/>
         <image name="scrollCheat" width="400" height="246"/>
     </resources>
-    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
